over write by Faraz Inam

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
-    <h1>Its is rainy weather outside</h1>
+    
+    <p>But Today is not a Rainy weather outside</p>
 </body>
 </html>
